fixed the background image covering window

--- a/site.css
+++ b/site.css
@@ -3,20 +3,19 @@ body{
   padding: 0;
 }
 
-
 img{
   width: 100%;
 }
 
 .mp-page{
 position: relative;
-width:200px;
-height: 200px;
+width: 100%;
+height: 100vh;
 }
 
 .mp-shot{
 position: absolute;
-width:600%;
+width:100%;
 z-index:1;
 animation: move-left-to-right 5s infinite;
 }
@@ -40,26 +39,26 @@ animation: move-left-to-right 5s infinite;
   position: absolute;
   width:200px;
   top:50;
-  left:150%;
+  left:25%;
 }
 
 .mp-bottom-left{
   position: absolute;
   width:200px;
-  bottom:-200%;
-  left:150%;
+  bottom:20%;
+  left:25%;
 }
 
 .mp-top-right{
   position: absolute;
   width:200px;
   top:0;
-  right:-350%;
+  right:25%;
 }
 
 .mp-bottom-right{
   position: absolute;
  width:200px;
-  bottom:-200%;
-  right:-350%;
+  bottom:20%;
+  right:25%;
 }
